amend: cta border width to be 1px

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -123,7 +123,7 @@ ul#footer-social {
 	height: 200px;
 	margin-top: 1rem;
 	margin-bottom: 2rem;
-	border: solid #686868;
+	border: 1px solid #686868;
 	border-radius: 20px;
 	box-shadow: 4px 2px 4px #ccc;
 	background-color: #f2f0f0;
