test: darker red for accessibility

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -140,7 +140,7 @@ ul#footer-social {
 
 .cta-button {
     /* background-color: #d85656; */
-    background-color: #f73b3b;
+    background-color: #db1616;
 	border: none;
 	margin-top: 10px;
 }
