--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -140,7 +140,7 @@ ul#footer-social {
 
 .cta-button {
     /* background-color: #d85656; */
-    background-color: #db1616;
+    background-color: #c4302b;
 	border: none;
 	margin-top: 10px;
 }
